<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="30dp"
    >
    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/hint_login"
        android:id="@+id/login">
    </EditText>
    <EditText

        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password_hint"
        android:id="@+id/password">
    </EditText>
    <TextView
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/yet_auth"
        android:id="@+id/text1">

    </TextView>
    <Button

        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/log_in_button"
        android:id="@+id/log_in">

    </Button>
    <Button

        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/register_button"
        android:id="@+id/register">

    </Button>
    <Button
        android:visibility="gone"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/continue_1"
        android:id="@+id/but_continue">
    </Button>


</LinearLayout>
